prova revisione di agosto 2016

--- a/pages/Mc01.md
+++ b/pages/Mc01.md
@@ -3,73 +3,110 @@ layout: page
 title: Mc01
 ---
 
- [capitolo successivo ->](Mc02.html)
+ [avanti ->](Mc02.html)
+ 
+#### Introduzione
 
-### Introduzione
-1 Inizia qui la presentazione [1] di [Gesù](/g/Gesù "wikilink") [Cristo](/Cristo "wikilink") [Figlio di Dio](/Figlio_di_Dio "wikilink").
+##### 1
 
-2-3 Il libro del profeta Isaia dice: *Guarda, io ti faccio precedere dal mio portavoce e apripista. Voce di uno che grida nel deserto: "Sistemate la strada del [Padrone](/g/Signore "wikilink"), raddrizzate i suoi sentieri".*[2]
+Inizia qui la <a href="http://www.pachialu.it/doku/doku.php?id=glossario#vangelo" class="wikilink1" title="glossario">presentazione</a> di Gesù Cristo Figlio di Dio.
 
-4-5 Arrivò nel deserto Giovanni "il Battezzatore", annunciando un lavaggio[3] di pentimento per il perdono degli errori[4]. Tutti gli abitanti della Giudea[5] e di Gerusalemme correvano da lui e si facevano lavare nel fiume Giordano, confessando le loro mancanze.
+##### 2-3
 
-6-8 Giovanni indossava un vestito di pelo di cammello con una cintura di cuoio, mangiava cavallette e miele selvatico. Predicava dicendo: «Dopo di me viene uno che è più potente di me; non sono nemmeno degno di togliergli i sandali. Io vi ho immerso in acqua, ma lui vi immergerà in Spirito di Dio[6]».
+Il libro del profeta Isaia dice: *Guarda, io ti faccio precedere dal mio portavoce e apripista. Voce di uno che grida nel deserto: “Sistemate la strada del Padrone, raddrizzate i suoi sentieri”.* <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>
 
-9-11 Proprio in quel periodo arrivò Gesù da [Nazaret](/Nazaret "wikilink") di [Galilea](/Galilea "wikilink"), e fu lavato[7] nel fiume Giordano da Giovanni. Mentre Gesù usciva dall'acqua, vide il cielo che si apriva e Spirito di Dio che scendeva su di lui in forma di colomba. Una voce dall'alto disse: "Tu sei il figlio che porto nel cuore, e sono molto fiero di te".
+##### 4-5
 
-12-13 Subito dopo, Spirito di Dio portò Gesù nel deserto, dove rimase per quaranta giorni e dove fu tentato dall'Angelo Bugiardo[8] . Rimase là con le bestie selvatiche, e gli angeli [9] lo servivano.
+Giovanni “il Battezzatore” arrivò nel deserto, annunciando un <a href="http://www.pachialu.it/doku/doku.php?id=glossario#battesimo" class="wikilink1" title="glossario">lavaggio rituale</a> di pentimento per il perdono degli <a href="http://www.pachialu.it/doku/doku.php?id=glossario#peccato" class="wikilink1" title="glossario">errori</a>. Tutti gli abitanti della <a href="http://www.pachialu.it/doku/doku.php?id=giudea" class="wikilink2" title="giudea">Giudea</a> e di Gerusalemme correvano da lui e si facevano lavare nel fiume Giordano, confessando le loro mancanze.
 
-### Gesù predica e convoca i primi seguaci
-14-15 In seguito, dopo l'arresto di Giovanni, Gesù si trasferì in Galilea per predicare il messaggio della salvezza di Dio. Gesù diceva a tutti: "È arrivato il momento: il governo di Dio è vicino! Pentitevi dei vostri errori e fate vostro questo messaggio!"
+##### 6-8
 
-16-18 Un giorno, mentre Gesù passeggiava lungo la riva del lago di Galilea, vide due pescatori, Simone e suo fratello Andrea, che buttavano le reti. Gesù li chiamò: "Venite, seguitemi e vi farò diventare pescatori di uomini!" Immediatamente i due lasciarono le reti e andarono con lui.
+Giovanni indossava un vestito di pelo di cammello con una cintura di cuoio, mangiava cavallette e miele selvatico. Predicava dicendo: “Dopo di me viene uno che è più potente di me; io non sono nemmeno degno di togliergli i sandali. Io vi ho immerso in acqua, ma lui vi immergerà in <a href="http://www.pachialu.it/doku/doku.php?id=spirito_di_dio" class="wikilink2" title="spirito_di_dio">Spirito di Dio</a>.”
 
-19-20 Poco più avanti, Gesù vide Giacomo e Giovanni, figli di Zebedeo, che riparavano le reti nella barca. Gesù li chiamò e loro lo seguirono, abbandonando il padre con i suoi dipendenti.
+##### 9-11
 
-### Liberazioni di Gesù
-21-22 Gesù e i suoi compagni arrivarono alla città di Cafarnao, e, un sabato mattina, entrarono nella sinagoga[10], dove Gesù si mise a insegnare. I presenti rimanevano stupiti dalle sue parole, perchè insegnava con autorevolezza, diversamente dai professori dell'epoca.
+Proprio in quel periodo arrivò Gesù da Nazaret di Galilea, e si fece <a href="http://www.pachialu.it/doku/doku.php?id=glossario#battesimo" class="wikilink1" title="glossario">lavare</a> da Giovanni nel fiume Giordano. Mentre Gesù usciva dall’acqua, vide il cielo che si apriva e Spirito di Dio che scendeva su di lui in forma di colomba. Una voce dall’alto disse: “Tu sei il figlio che porto nel cuore, e sono molto fiero di te.”
 
-23-24 Tra gli ascoltatori c'era un signore in preda ad uno spirito del male[11], che si mise ad urlare: "Che vuoi da noi, Gesù di Nazaret? Sei venuto per distruggerci? Io so che tu sei il Consacrato a Dio.
+##### 12-13
 
-25-26 Ma Gesù lo sgridò dicendo: "Stai zitto! Esci da questo signore!" A queste parole lo spirito del male, scuotendo violentemente la vittima e gridando forte, lasciò l'uomo. Tutti rimasero stupiti e cominciarono a discutere dell'accaduto. "Cos'è? Una nuova religione?" si chiedevano. "Guardate come parla con autorità: perfino gli spiriti del male ubbidiscono ai suoi ordini!".
+Subito dopo, Spirito di Dio portò Gesù nel deserto, dove rimase per quaranta giorni e dove fu tentato dall’<a href="http://www.pachialu.it/doku/doku.php?id=angelo_bugiardo" class="wikilink2" title="angelo_bugiardo">Angelo Bugiardo</a>. Rimase là con le bestie selvatiche, e gli <a href="http://www.pachialu.it/doku/doku.php?id=glossario#angelo" class="wikilink1" title="glossario">angeli</a> lo servivano.
 
-28 La notizia di quello che Gesù aveva fatto si sparse velocemente per tutta la regione.
+Modifica
 
-29 Poi uscirono dalla sinagoga e andarono con Giacomo e Giovanni a casa di Simone e Andrea, dove trovarono la suocera di Simone a letto con la febbre alta. Lo riferirono subito a Gesù, che si avvicinò a lei e le prese la mano per aiutarla ad alzarsi. Subito la febbre sparì, e lei si alzò per servirli.
+#### Gesù predica e convoca i primi seguaci
 
-32-33 Dopo il tramonto, portarono a Gesù molti malati e posseduti. Intanto, tutta Cafàrnao si era riunita alla porta, e quella sera Gesù guarì un gran numero di persone e ordinò a molti demòni di uscire dai corpi delle loro vittime, vietando agli spiriti di parlare, visto che sapevano chi fosse realmente.
+##### 14-15
 
-35-37 Il giorno dopo, Gesù si alzò molto prima dell'alba e andò in un posto solitario per pregare. Più tardi, Simone e gli altri lo cercavano e quando lo trovarono gli dissero: "Tutti ti cercano!"
+In seguito, dopo l’arresto di Giovanni, Gesù si trasferì in Galilea per predicare il messaggio della salvezza di Dio. Gesù diceva a tutti: “È arrivato il momento: il governo di Dio è vicino! Pentitevi dei vostri errori e fate vostro questo messaggio!”
 
-38-39 Ma Gesù rispose: "Dobbiamo proseguire verso le altre città e portare anche lì il mio messaggio, perché questa è la mia missione". Così Gesù girò tutta la provincia della Galilea, predicando nelle sinagoghe e liberando molte persone dalla forza degli spiriti del male.
+##### 16-18
 
-### Guarigione di un lebbroso
-40-42 Una volta gli si avvicinò un lebbroso che, inginocchiato davanti a lui, cominciò a pregarlo: "Se vuoi, tu puoi guarirmi!" Gesù ebbe pietà di lui, lo toccò e disse: "Sì lo voglio: guarisci!" Immediatamente la lebbra sparì, e fu guarito.
+Un giorno, mentre Gesù passeggiava lungo la riva del lago di Galilea, vide due pescatori, Simone e suo fratello Andrea, che buttavano le reti. Gesù li chiamò: “Venite, seguitemi e vi farò diventare pescatori di uomini!” Immediatamente i due lasciarono le reti e andarono con lui.
 
-43-44 Gesù lo mandò via, e gli raccomandò: "Vai subito a farti controllare dal sacerdote, ma non raccontare niente a nessuno. Poi, fai l'offerta secondo le regole di Mosé per la guarigione dalla lebbra, per far sapere a tutti che sei guarito."
+##### 19-20
 
-45 Appena partito, però, quel signore cominciò a urlare a tutti la notizia della sua guarigione, col risultato che ben presto Gesù fu circondato da una folla tale che non poteva più entrare liberamente in nessuna città; doveva starsene fuori, negli spazi aperti dove andava a trovarlo gente da tutte le parti.
+Poco più avanti, Gesù vide Giacomo e Giovanni, figli di Zebedeo, che riparavano le reti nella barca. Gesù li chiamò e loro lo seguirono, abbandonando il padre con i suoi dipendenti.
+
+Modifica
+
+#### Liberazioni di Gesù
+
+##### 21-22
+
+Gesù e i suoi compagni arrivarono alla città di Cafàrnao, e, un sabato mattina, entrarono nella <a href="http://www.pachialu.it/doku/doku.php?id=sinagoga" class="wikilink2" title="sinagoga">sinagoga</a>, dove Gesù si mise a insegnare. I presenti rimanevano stupiti dalle sue parole, perchè insegnava con autorevolezza, diversamente dai professori dell’epoca.
+
+##### 23-24
+
+Tra gli ascoltatori c’era un signore in preda ad uno spirito del male, che si mise ad urlare: “Che vuoi da noi, Gesù di Nazaret? Sei venuto per distruggerci? Io so che tu sei il <a href="http://www.pachialu.it/doku/doku.php?id=consacrato_a_dio" class="wikilink2" title="consacrato_a_dio">Consacrato a Dio</a>.“
+
+##### 25-27
+
+Ma Gesù lo sgridò dicendo: “Stai zitto! Esci da questo signore!” A queste parole lo spirito malefico, scuotendo violentemente la vittima e gridando forte, lasciò l’uomo. Tutti rimasero stupiti e cominciarono a discutere dell’accaduto. “Cos’è? Una nuova religione?” si chiedevano. “Guardate come parla con autorità: perfino gli spiriti del male ubbidiscono ai suoi ordini!”
+
+##### 28
+
+La notizia di quello che Gesù aveva fatto si sparse velocemente per tutta la regione.
+
+##### 29-31
+
+Poi uscirono dalla sinagoga e andarono con Giacomo e Giovanni a casa di Simone e Andrea, dove trovarono la suocera di Simone a letto con la febbre alta. Lo riferirono subito a Gesù, che si avvicinò e la prese per mano per aiutarla ad alzarsi. Subito la febbre sparì, e lei si alzò per servirli.
+
+##### 32-34
+
+Dopo il tramonto, portarono a Gesù molti malati e posseduti. Intanto, tutta Cafàrnao si era riunita alla porta, e quella sera Gesù guarì un gran numero di persone e ordinò a molti spiriti di uscire dai corpi delle loro vittime, vietandogli di parlare, visto che conoscevano la sua vera identità.
+
+##### 35-37
+
+Il giorno dopo, Gesù si alzò molto prima dell’alba e andò in un posto solitario per pregare. Più tardi, Simone e gli altri lo cercavano e quando lo trovarono gli dissero: “Tutti ti cercano!”
+
+##### 38-39
+
+Ma Gesù rispose: “Dobbiamo proseguire verso le altre città e portare anche lì il mio messaggio, perché questa è la mia missione”. Così Gesù girò tutta la provincia della Galilea, predicando nelle sinagoghe e liberando molte persone dalla forza degli spiriti del male.
+
+Modifica
+
+#### Guarigione di un lebbroso
+
+##### 40-42
+
+Una volta gli si avvicinò un lebbroso che, inginocchiato davanti a lui, cominciò a pregarlo: “Se vuoi, tu puoi guarirmi!” Gesù ebbe pietà di lui, lo toccò e disse: “Sì lo voglio: guarisci!” Immediatamente la lebbra sparì, e fu guarito.
+
+##### 43-44
+
+Gesù lo mandò via, e gli raccomandò: “Vai subito a farti controllare dal sacerdote, ma non raccontare niente a nessuno. Poi, fai l’offerta secondo le regole di Mosé per la guarigione dalla lebbra, per far sapere a tutti che sei guarito.”
+
+##### 45
+
+Appena partito, però, quel signore cominciò a urlare a tutti la notizia della sua guarigione, col risultato che ben presto Gesù fu circondato da una tale folla che non poteva più entrare liberamente in nessuna città; doveva starsene fuori, negli spazi aperti dove andava a trovarlo gente da tutte le parti.
+
+Modifica
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> la seconda parte si trova in Is 40:3, ma la prima parte non ha un corrispondente in Isaia, semmai in Esodo 23:20 e Mal. 3:1
+
+mc01.txt · Ultima modifica: 2016/08/31 22:27 da admin
+
+------------------------------------------------------------------------
 
  [avanti->](Mc02.html)
- 
-###### Note
-[1] [vangelo](/g/vangelo "wikilink")
 
-[2] la seconda parte si trova in Is 40:3, ma la prima parte non ha un corrispondente in Isaia, semmai in Esodo 23:20 e Mal. 3:1
 
-[3] [battesimo](/g/battesimo "wikilink")
-
-[4] [peccati](/g/peccato "wikilink")
-
-[5] [Giudea](/g/Giudea "wikilink")
-
-[6] [Spirito Santo](/g/Spirito_Santo "wikilink")
-
-[7]
-
-[8] [Satana](/g/Satana "wikilink")
-
-[9] [angelo](/g/angelo "wikilink")
-
-[10] sinagoga
-
-[11] demonio
