--- a/pages/Mc12.md
+++ b/pages/Mc12.md
@@ -74,12 +74,11 @@ sbagliando di grosso!
 ### La prima regola
 28-31 Uno dei professori di Mosè che era lì e aveva seguito la
 discussione capì che Gesù aveva risposto bene ai Sadducei, e gli si
-avvicinò per chiedere: “Di tutte le [regole di
-Mosè](../master/glossario.txt "glossario: legge di Mosé"), qual’è la più
+avvicinò per chiedere: “Di tutte le [regole di Mosè](../master/glossario.txt "glossario: legge di Mosé"), qual’è la più
 importante?” Gesù rispose: “Quella che dice: *“Ascolta, Israele, il Capo
 Supremo, nostro Dio, è l’unico Capo. Amalo con tutto il cuore, con tutta
 la tua testa e le tue forze!”*[^18]. La seconda è: *“Ama chi ti è vicino
-come te stesso”*[\^d]. Non ci sono regole più importanti di queste due.”
+come te stesso”*[^19]. Non ci sono regole più importanti di queste due.”
 
 32-34 Il professore di Mosè rispose: “Collega, hai detto proprio la
 verità: c’e solo un Dio e uno solo! È molto più importante amarlo con
