marco 1, layout sistemato a mano

--- a/pages/Mc01.md
+++ b/pages/Mc01.md
@@ -1,9 +1,10 @@
 ---
 layout: page
-title: Mc01
+title: Marco 1
 ---
 
  [avanti ->](Mc02.html)
+ ------------------------------------------------------------------------
  
 #### Introduzione
 
@@ -31,7 +32,6 @@ Proprio in quel periodo arrivò Gesù da Nazaret di Galilea, e si fece <a href="
 
 Subito dopo, Spirito di Dio portò Gesù nel deserto, dove rimase per quaranta giorni e dove fu tentato dall’<a href="http://www.pachialu.it/doku/doku.php?id=angelo_bugiardo" class="wikilink2" title="angelo_bugiardo">Angelo Bugiardo</a>. Rimase là con le bestie selvatiche, e gli <a href="http://www.pachialu.it/doku/doku.php?id=glossario#angelo" class="wikilink1" title="glossario">angeli</a> lo servivano.
 
-Modifica
 
 #### Gesù predica e convoca i primi seguaci
 
@@ -47,7 +47,6 @@ Un giorno, mentre Gesù passeggiava lungo la riva del lago di Galilea, vide due 
 
 Poco più avanti, Gesù vide Giacomo e Giovanni, figli di Zebedeo, che riparavano le reti nella barca. Gesù li chiamò e loro lo seguirono, abbandonando il padre con i suoi dipendenti.
 
-Modifica
 
 #### Liberazioni di Gesù
 
@@ -83,7 +82,6 @@ Il giorno dopo, Gesù si alzò molto prima dell’alba e andò in un posto solit
 
 Ma Gesù rispose: “Dobbiamo proseguire verso le altre città e portare anche lì il mio messaggio, perché questa è la mia missione”. Così Gesù girò tutta la provincia della Galilea, predicando nelle sinagoghe e liberando molte persone dalla forza degli spiriti del male.
 
-Modifica
 
 #### Guarigione di un lebbroso
 
@@ -99,14 +97,11 @@ Gesù lo mandò via, e gli raccomandò: “Vai subito a farti controllare dal sa
 
 Appena partito, però, quel signore cominciò a urlare a tutti la notizia della sua guarigione, col risultato che ben presto Gesù fu circondato da una tale folla che non poteva più entrare liberamente in nessuna città; doveva starsene fuori, negli spazi aperti dove andava a trovarlo gente da tutte le parti.
 
-Modifica
+------------------------------------------------------------------------
 
 <sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> la seconda parte si trova in Is 40:3, ma la prima parte non ha un corrispondente in Isaia, semmai in Esodo 23:20 e Mal. 3:1
 
-mc01.txt · Ultima modifica: 2016/08/31 22:27 da admin
-
 ------------------------------------------------------------------------
-
  [avanti->](Mc02.html)
 
 
