--- a/pages/Mc02.md
+++ b/pages/Mc02.md
@@ -1,47 +1,64 @@
 ---
 layout: page
-title: Mc02
+title: Marco 2
 ---
 
-[<-capitolo precedente](Mc01.html) [capitolo successivo->](Mc03.html)
+[<-indietro](Mc01.html) [avanti ->](Mc03.html)
+ 
+ ------------------------------------------------------------------------
 
-### Guarire e perdonare
-1-4 Alcuni giorni dopo, Gesù tornò a Cafàrnao, e si sparse la voce che era a casa di uno. Rapidamente, arrivò una tale folla che non c'era più posto per nessuno, nemmeno fuori dalla porta. Gesù presentava il messaggio di Dio. Arrivarono anche quattro signori portando un disabile. Non riuscendo a farsi largo tra la folla, cercarono di raggiungere Gesù facendo un buco nel tetto proprio sopra la sua testa, e calando l'amico paralizzato sulla barella.
+Marco 2
+=======
 
-5 Gesù vedendo la loro fiducia, disse al malato "Caro, i tuoi fallimenti sono stati perdonati."
+#### Guarire e perdonare
 
-6-7 Alcuni capi religiosi del posto, seduti lì a guardare, pensarono "Come è possibile? È una bestemmia: solo Dio può perdonare gli errori"
+##### 1-4
 
-8-11 Allora Gesù, che li leggeva nel pensiero, disse: "Perché fate questi ragionamenti? È più difficile perdonare le sue mancanze o guarirlo? Perciò, per dimostrarvi che io, l'inviato di Dio, sono autorizzato a perdonare gli errori ... ", si girò verso il paralizzato e ordinò: "alzati, raccogli la tua barella e torna a casa tua!".
+Alcuni giorni dopo, Gesù tornò a Cafàrnao, e si sparse la voce che era a casa di uno. Rapidamente, arrivarono in così tanti che non c’era più posto per nessuno, nemmeno fuori dalla porta. Gesù presentava il messaggio di Dio. Arrivarono anche quattro signori portando un disabile. Non riuscendo a farsi largo tra la folla, cercarono di raggiungere Gesù facendo un buco nel tetto proprio sopra la sua testa, e calando l’amico paralizzato sulla barella.
 
-12 Quel signore saltò in piedi, raccolse la barella e si fece largo tra i presenti. Tutti rimasero a bocca aperta: "Mai vista una cosa del genere!" esclamavano, e davano il merito a Dio.
+##### 5-7
 
-### Levi e la gentaglia
-13-14 Poi Gesù tornò sulla riva del lago, e lì si mise a insegnare alla folla che gli si raccoglieva intorno. Mentre passava, vide Levi, figlio di Alfeo, seduto alla sua scrivania, raccogliendo tasse [1]. "Vieni con me", gli disse, e Levi si alzò e se ne andò con lui.
+Gesù vedendo la loro fiducia, disse al malato: “Caro, i tuoi <a href="http://www.pachialu.it/doku/doku.php?id=glossario#peccato" class="wikilink1" title="glossario">fallimenti</a> sono stati perdonati.” Alcuni capi religiosi del posto, seduti lì a guardare, pensarono: “Come è possibile? È una bestemmia: solo Dio può perdonare gli <a href="http://www.pachialu.it/doku/doku.php?id=glossario#peccato" class="wikilink1" title="glossario">errori</a>.”
 
-15 Quella sera, Gesù e i suoi allievi stretti mangiarono a casa di Levi, insieme a molti esattori e numerosi altri che pur disprezzando la religione [2], lo seguivano.
+##### 8-12
 
-16-17 Quando alcuni capi religiosi videro Gesù a tavola con esattori e bestemmiatori, chiesero ai suoi amici: "Come mai mangia e beve con quella gentaglia?" Gesù sentì le loro parole e intervenne: "Sono i malati che hanno bisogno del medico, e non i sani! Io non sono venuto per quelli che rispettano le regole, ma per quelli che sbagliano."
+Allora Gesù, che li leggeva nel pensiero, disse: “Perché fate questi ragionamenti? È più difficile perdonare le sue mancanze o guarirlo? Perciò, per dimostrarvi che io, l’inviato di Dio, sono autorizzato a perdonare gli errori … “, si girò verso il paralizzato e ordinò: “alzati, raccogli la tua barella e torna a casa tua!” Quel signore saltò in piedi, raccolse la barella e si fece largo tra i presenti. Tutti rimasero a bocca aperta: “Mai vista una cosa del genere!” esclamavano, e davano il merito a Dio.
 
-### Vecchio e nuovo
-18 I seguaci di Giovanni "Il battezzatore" e i seguaci dei Farisei praticavano il digiuno. Alcuni chiesero a Gesù: "Perché i seguaci di Giovanni e dei Farisei praticano il digiuno e i tuoi no?"
+#### Levi e la gentaglia
 
-19-20 "Quando c'è un matrimonio gli invitati digiunano? Fin quando stanno con lo sposo, mangiano e bevono. Ma verrà il momento in cui lo sposo gli sarà tolto, e allora digiuneranno.
+##### 13-14
 
-21-22 Nessuno mette della stoffa nuova per rattoppare un vestito vecchio, perché la stoffa nuova si restringe e strapperà il vecchio, e il danno sarà peggiore. E neanche si mette il vino novello in bottiglie vecchie, che esplode e fa perdere vino e bottiglia. Il vino nuovo va in bottiglie nuove.
+Poi Gesù tornò sulla riva del lago, e si mise a insegnare alla folla che si raccoglieva intorno. Mentre passava, vide Levi, figlio di Alfeo, seduto al suo banchetto, raccogliendo tasse<sup>
+<a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>. “Vieni con me”, gli disse, e Levi si alzò e se ne andò con lui.
 
-### Il padrone del giorno di riposo
-23-24 Un'altra volta, di sabato [3], mentre Gesù e i suoi seguaci attraversavano i campi, alcuni di loro raccolsero delle spighe \[per mangiare il grano strada facendo\] Subito alcuni capi degli ebrei incominciarono a protestare con Gesù: "Non si fanno queste cose di sabato: è contro le regole di Mosé!"
+##### 15-17
 
-25-26 Gesù rispose: "Avete mai letto nella Bibbia cosa fece il Re Davide, quando lui e i suoi compagni erano affamati? Davide entrò nel Tempio di Dio (ai tempi del Sacerdote Capo Abiatar), e con la sua compagnia mangiò il pane speciale riservato ai sacerdoti."
+Quella sera, Gesù e i suoi allievi stretti mangiarono a casa di Levi, insieme a parecchi esattori e altri che pur disprezzando la religione, lo seguivano. Quando alcuni capi religiosi videro Gesù a tavola con esattori e bestemmiatori, chiesero ai suoi amici: “Come mai mangia e beve con quella gentaglia?” Gesù sentì i loro discorsi e intervenne: “I malati hanno bisogno del medico, non chi sta bene! Io non sono venuto per quelli che rispettano le regole, ma per <a href="http://www.pachialu.it/doku/doku.php?id=glossario#peccato" class="wikilink1" title="glossario">quelli che sbagliano</a>”
 
-27-28 Poi aggiunse: "Il giorno di riposo[4] è stato fatto per l'uomo, e non l'uomo per il giorno di riposo!". Sappiate che io, il Protagonista [5], sono padrone anche del giorno di riposo."
+#### Vecchio e nuovo
 
-[<-indietro](Mc01.html) [avanti->](Mc03.html)
+##### 18-20
 
-###### Note
-[1] gli esattori erano molto mal visti, perché toglievano soldi ai loro compaesani per darli all'occupatore (i romani) e spesso se ne approfittavano
-[2] [peccatori](/G/peccatori "wikilink")
-[3] [Shabat, sabato, giorno di riposo](/g/shabat "wikilink")
-[4]
-[5] [Messia](/g/Messia "wikilink")
+I seguaci di Giovanni “Il battezzatore” e i seguaci dei Farisei praticavano il digiuno. Alcuni chiesero a Gesù: “Perché i seguaci di Giovanni e dei Farisei praticano il digiuno e i tuoi no?” “Quando c’è un matrimonio gli invitati digiunano? Fin quando stanno con lo sposo, mangiano e bevono. Ma verrà il momento in cui lo sposo gli sarà tolto, e allora digiuneranno.“
+
+##### 21-22
+
+“Nessuno mette della stoffa nuova per rattoppare un vestito vecchio, perché la stoffa nuova si restringe e strappa il vecchio, e il danno sarà peggiore. E neanche si mette il vino novello in bottiglie vecchie, che esplodono e fanno perdere vino e bottiglia. Il vino nuovo va in bottiglie nuove.”
+
+#### Il padrone del giorno di riposo
+
+##### 23-26
+
+Un’altra volta, di <a href="http://www.pachialu.it/doku/doku.php?id=glossario#sabato" class="wikilink1" title="glossario">sabato</a>, mentre Gesù e i suoi seguaci attraversavano i campi, alcuni di loro raccolsero delle spighe \[per mangiare il grano strada facendo\]. Subito alcuni capi degli ebrei incominciarono a protestare con Gesù: “Non si fanno queste cose di sabato: è contro le regole di Mosé!” Gesù rispose: “Avete mai letto nella Bibbia cosa fece il Re Davide, quando lui e i suoi compagni erano affamati? Davide entrò nel Tempio di Dio (ai tempi del Sacerdote Capo Abiatar), e con la sua compagnia mangiò il pane speciale riservato ai sacerdoti.”
+
+##### 27-28
+
+Poi aggiunse: “Il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#sabato" class="wikilink1" title="glossario">giorno di riposo</a> è stato fatto per l’uomo, e non l’uomo per il giorno di riposo! Sappiate che io, il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#messia" class="wikilink1" title="glossario">Protagonista</a>, sono padrone anche del giorno di riposo.”
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> gli esattori erano molto mal visti, perché toglievano soldi ai loro compaesani per darli all’occupatore (i romani) e spesso se ne approfittavano
+
+------------------------------------------------------------------------
+[<-indietro](Mc01.html) [avanti ->](Mc03.html)
+
