--- a/pages/Mc03.md
+++ b/pages/Mc03.md
@@ -1,46 +1,79 @@
 ---
 layout: page
-title: Mc03
+title: Marco 3
 ---
 
 [<-indietro](Mc02.html)  [avanti->](Mc04.html)
+ 
+ ------------------------------------------------------------------------
 
-### Gesù guarisce
-1-2 Poi entrò di nuovo nella sinagoga, dove vide un signore con la mano paralizzata. Siccome era sabato[1] la gente lo teneva d'occhio per vedere se avrebbe guarito la mano del paralizzato e se potevano accusarlo di qualcosa.
+#### Gesù guarisce
 
-3-4 Allora Gesù chiese al signore con la mano paralizzata di alzarsi davanti a tutti, e si rivolse ai presenti chiedendo: "Nel giorno del riposo bisogna fare del bene o del male? In questo giorno si può salvare una persona o bisogna lasciarla morire?". Nessuno rispondeva.
+##### 1-2
 
-5 Dopo averli guardati tutti con indignazione, profondamente intristito dalla loro indifferenza, Gesù comandò al paralizzato: "Allunga la mano!". Lui ubbidì, e immediatamente la mano tornò sana.
+Poi entrò di nuovo nella sinagoga, dove vide un signore con la mano paralizzata. Siccome era <a href="http://www.pachialu.it/doku/doku.php?id=glossario#sabato" class="wikilink1" title="glossario">sabato</a> la gente lo teneva d’occhio per vedere se avrebbe guarito la mano del paralizzato e se potevano accusarlo di qualcosa.
 
-6 I capi religiosi ebrei se ne andarono subito a cercare i seguaci del re Erode per escogitare insieme un piano per uccidere Gesù.
+##### 3-4
 
-7-8 Intanto, Gesù e i suoi allievi si erano ritirati verso il lago, seguiti da una folla immensa proveniente da tutta la Galilea, dalla Giudea, da Gerusalemme e dall'Idumea, da oltre il fiume Giordano e perfino dalle città di Tiro e Sidone. La notizia dei suoi miracoli si era sparsa ovunque, e di conseguenza era diventato ricercatissimo.
+Allora Gesù chiese al signore con la mano paralizzata di alzarsi davanti a tutti, e fece questa domanda ai presenti: “Nel giorno del riposo bisogna fare del bene o del male? In questo giorno si può salvare una persona o bisogna lasciarla morire?” Nessuno rispondeva.
 
-9-10 Gesù chiese ai discepoli di tenere una barca pronta, per sfuggire alla calca, nel caso la folla lo schiacciasse. Infatti aveva già guarito moltissime persone e, per questo motivo, gli ammalati venivano e gli si buttavano addosso per essere toccati.
+##### 5
 
-11-12 Quando lo vedevano, i posseduti cadevano ai suoi piedi gridando: "Tu sei il Figlio di Dio!" Ma Gesù li sgridava con forza perché non voleva che rivelassero la sua identità.
+Dopo averli guardati tutti con indignazione, profondamente deluso dalla loro indifferenza, Gesù comandò al paralizzato: “Allunga la mano!” Lui ubbidì, e immediatamente la mano tornò sana.
 
-### Seguaci e oppositori
-13-14 Poco dopo, Gesù salì sulla collina, portandosi quelli che aveva scelto. Scelse dodici allievi per averli vicino e mandarli a predicare, e gli diede l'autorità di liberare dagli spiriti del male.
+##### 6
 
-16 I dodici si chiamavano: Simone, che Gesù chiamò Pietro, Giacomo e Giovanni (figli di Zebedeo, che Gesù soprannominò "figli del tuono"), Andrea, Filippo, Bartolomeo, Matteo, Tommaso, Giacomo (figlio di Alfeo), Taddeo, Simone (il rivoluzionario), e Giuda Iscariota (che poi lo tradì).
+I capi religiosi ebrei se ne andarono subito a cercare i seguaci del re Erode per escogitare insieme un piano per uccidere Gesù.
 
-20-21 In seguito, Gesù andò a casa di uno, e la gente cominciò di nuovo a radunarsi, al punto che la casa divenne talmente affollata che lui e i compagni non riuscivano nemmeno a mangiare. Quando i suoi parenti vennero a sapere della cosa, vennero a prenderlo dicendo: "È fuori di testa".
+##### 7-8
 
-22 E alcuni insegnanti di teologia, venuti da Gerusalemme, dicevano: "È posseduto da Satana, il re degli spiriti del male: ecco perché riesce a liberare dagli spiriti del male."
+Intanto, Gesù e i suoi allievi si erano ritirati verso il lago, seguiti da una folla immensa proveniente da tutta la Galilea, dalla Giudea, da Gerusalemme e dall’Idumea, da oltre il fiume Giordano e perfino dalle città di Tiro e Sidone. La notizia dei suoi miracoli si era sparsa ovunque, e di conseguenza era diventato ricercatissimo.
 
-23-27 A questo punto, Gesù li chiamò e ragionò con loro, usando delle metafore: "Come è possibile che Satana scaccia Satana? Una nazione divisa, che fa la guerra civile, si distrugge da sola. Una famiglia che si divide e litiga non durerà molto, e se il Capo del Male combatte contro se stesso, quanto può durare? Perderebbe completamente la sua forza. Un uomo forte deve essere immobilizzato, prima che si riesca a derubarlo delle sue cose e svuotargli la casa".
+##### 9-10
 
-28-29 "Vi garantisco una cosa: ai bestemmiatori e a quelli che sbagliano può essere perdonato di tutto, ma l'insulto contro lo Spirito di Dio non sarà mai perdonato".
+Gesù chiese ai discepoli di tenere una barca pronta, per sfuggire alla calca, nel caso la folla lo schiacciasse. Infatti aveva già guarito moltissime persone e, per questo motivo, gli ammalati venivano e gli si buttavano addosso per essere toccati.
 
-30 Gesù diceva queste cose perché alcuni sostenevano che aveva compiuto i suoi miracoli grazie all'aiuto di uno spirito del male.
+##### 11-12
 
-### La mia famiglia
-31-32 A un certo punto, arrivarono sua madre e i suoi fratelli, che lo fecero chiamare per farlo uscire. Una folla lo circondava, seduta, e gli passò il messaggio, dicendogli: "Tua madre, i tuoi fratelli e le tue sorelle sono fuori e vogliono vederti".
+Quando lo vedevano, i posseduti cadevano ai suoi piedi gridando: “Tu sei il Figlio di Dio!” Ma Gesù li sgridava con forza perché non voleva che rivelassero la sua identità.
 
-33-34 E Gesù rispose: "Chi è mia madre, e chi sono i miei fratelli?" Guardando quelli che gli stavano attorno, aggiunse: "Vedete? Questi sono mia madre e i miei fratelli! Chiunque ubbidisce a Dio è mio fratello, mia sorella e mia madre".
+#### I dodici
 
-[<-indietro](Mc02.html) [avanti->](Mc04.html)
+##### 13-15
 
-###### Note
-[1] [Shabat, sabato, giorno di riposo](/g/shabat "wikilink")
+Poco dopo, Gesù salì sulla collina, portandosi quelli che aveva scelto. Scelse dodici allievi per averli vicino e mandarli a predicare, e gli diede l’autorità di liberare dagli spiriti del male.
+
+##### 16-19
+
+I dodici si chiamavano: Simone, che Gesù chiamò Pietro, Giacomo e Giovanni (figli di Zebedeo, che Gesù soprannominò “figli del tuono”), Andrea, Filippo, Bartolomeo, Matteo, Tommaso, Giacomo (figlio di Alfeo), Taddeo, Simone (il rivoluzionario), e Giuda Iscariota (che poi lo tradì).
+
+#### Forza divina o forza del male?
+
+##### 20-21
+
+In seguito, Gesù andò a casa di uno, e la gente cominciò di nuovo a radunarsi, al punto che la casa divenne talmente affollata che lui e i compagni non riuscivano nemmeno a mangiare. Quando lo seppero i suoi parenti, vennero a prenderlo dicendo: “È fuori di testa.”
+
+##### 22
+
+E alcuni insegnanti di teologia, venuti da Gerusalemme, dicevano: “È posseduto da Satana, il re degli spiriti del male: ecco perché riesce a liberare dagli spiriti del male.”
+
+##### 23-27
+
+A questo punto, Gesù li chiamò e ragionò con loro, usando delle metafore: “Come è possibile che Satana scaccia Satana? Una nazione divisa, che fa la guerra civile, si distrugge da sola. Una famiglia che si divide e litiga non durerà molto, e se il Capo del Male combatte contro se stesso, quanto può durare? Perderebbe completamente la sua forza. Un uomo forte deve essere immobilizzato, prima che si riesca a derubarlo delle sue cose e svuotargli la casa”.
+
+##### 28-29
+
+“Vi garantisco una cosa: ai bestemmiatori e a quelli che sbagliano può essere perdonato di tutto, ma l’insulto contro Spirito di Dio non sarà mai perdonato”.
+
+##### 30
+
+Gesù diceva queste cose perché alcuni sostenevano che aveva compiuto i suoi miracoli grazie all’aiuto di uno spirito del male.
+
+#### La mia famiglia
+
+##### 31-34
+
+A un certo punto, arrivarono sua madre e i suoi fratelli, che lo fecero chiamare per farlo uscire. Una folla lo circondava, seduta, e gli passò il messaggio, dicendogli: “Tua madre, i tuoi fratelli e le tue sorelle sono fuori e vogliono vederti”. E Gesù rispose: “Chi è mia madre, e chi sono i miei fratelli?” Guardando quelli che gli stavano attorno, aggiunse: “Vedete? Questi sono mia madre e i miei fratelli! Chiunque ubbidisce a Dio è mio fratello, mia sorella e mia madre”.
+
+------------------------------------------------------------------------
+[<-indietro](Mc02.html) [avanti ->](Mc04.html)
